
name:                DmpHelper
version:             0.1.0.1
synopsis:            Command line conversion utility. Converts "DMP Markup" to HTML/text
-- description:
homepage:            doingmyprogramming.com
license:             GPL-3
license-file:        ../LICENSE
author:              Chris Tetreault
maintainer:          Chris Tetreault
copyright:           Chris Tetreault, 2015
category:            Text
build-type:          Simple
cabal-version:       >=1.8

executable DmpHelper
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base ==4.*, parsec ==3.*, blaze-html ==0.*, blaze-markup ==0.*
