
name:                Liquid Haskell Converter
version:             0.1.0.1
synopsis:            Command line conversion utility. Converts a legacy liquidhaskell markup to the new format
-- description:
homepage:            doingmyprogramming.com
license:             GPL-3
license-file:        ../LICENSE
author:              Chris Tetreault
maintainer:          Chris Tetreault
copyright:           Chris Tetreault, 2015
category:            Text
build-type:          Simple
cabal-version:       >=1.8

executable lhconverter
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base ==4.*, parsec ==3.*
